--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,18 +2,26 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      java: corretto17
     commands:
-      - echo Installing dependencies
+      - echo Installing Maven dependencies...
       - mvn install -DskipTests
+  pre_build:
+    commands:
+      - echo Fetching secrets...
+      - |
+        SECRET_JSON=$(aws secretsmanager get-secret-value --secret-id MyAppSecrets --query SecretString --output text)
+        export DB_USER=$(echo $SECRET_JSON | jq -r .DB_USER)
+        export DB_PASS=$(echo $SECRET_JSON | jq -r .DB_PASS)
   build:
     commands:
-      - echo Building the project
+      - echo Building the project...
       - mvn package
   post_build:
     commands:
-      - echo Running unit tests
+      - echo Build and test complete.
       - mvn test
-
 artifacts:
   files:
     - target/*.jar
